--- a/LuyenTapCauTrucDieuKien1/LuyenTapCauTrucDieuKien_Bai2.html
+++ b/LuyenTapCauTrucDieuKien1/LuyenTapCauTrucDieuKien_Bai2.html
@@ -10,7 +10,7 @@
 <script>
     let inputAge = prompt("Nhập tuổi để kiểm tra: ");
     let PassGradeTenAge = 16;
-    let isAgePassGradeTenAge = parseInt(inputAge)>= PassGradeTenAge;
+    let isAgePassGradeTenAge = parselet(inputAge)>= PassGradeTenAge;
     console.log(isAgePassGradeTenAge?"Đủ điều kiện học lớp 10" : "Không đủ điều kiện học lớp 10");
 </script>
 </html>
