--- a/LuyenTapCauTrucDieuKien1/LuyenTapCauTrucDieuKien_Bai3.html
+++ b/LuyenTapCauTrucDieuKien1/LuyenTapCauTrucDieuKien_Bai3.html
@@ -8,7 +8,7 @@
 
 <script>
     let inputNumber = prompt("Nhập số bất kì ");
-    let isPlusNumber = parseInt(inputNumber)>0;
+    let isPlusNumber = parselet(inputNumber)>0;
     console.log(isPlusNumber?"Số dương":"Số âm")
 </script>
 </body>
